log
Thu 14 Sep 2023 06:47:21 PM UTC: 
 tests:  1|8
total_score: 0/70
a6f36da
Thu 14 Sep 2023 06:59:26 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:43:8: error: statement with no effect [-Werror=unused-value]
   43 |     map->root;
      |     ~~~^~~~~~
treemap.c:44:8: error: statement with no effect [-Werror=unused-value]
   44 |     map->current;
      |     ~~~^~~~~~~~~
treemap.c:42:16: error: unused variable ‘current’ [-Werror=unused-variable]
   42 |     TreeNode * current =NULL;
      |                ^~~~~~~
treemap.c:41:16: error: unused variable ‘rood’ [-Werror=unused-variable]
   41 |     TreeNode * rood =NULL;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
9cb4b19
Thu 14 Sep 2023 06:59:58 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:16: error: unused variable ‘current’ [-Werror=unused-variable]
   42 |     TreeNode * current =NULL;
      |                ^~~~~~~
treemap.c:41:16: error: unused variable ‘root’ [-Werror=unused-variable]
   41 |     TreeNode * root =NULL;
      |                ^~~~
cc1: all warnings being treated as errors
Compilation failed
a11b815
Thu 14 Sep 2023 07:00:35 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:15: error: unused variable ‘current’ [-Werror=unused-variable]
   42 |     TreeMap * current =NULL;
      |               ^~~~~~~
treemap.c:41:15: error: unused variable ‘root’ [-Werror=unused-variable]
   41 |     TreeMap * root =NULL;
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
665d6ea
Thu 14 Sep 2023 07:00:51 PM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|8
total_score: 0/70
5cc98c7
Thu 14 Sep 2023 07:01:02 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
0752a75
Thu 14 Sep 2023 07:34:24 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|0
68b671c
Thu 14 Sep 2023 07:35:04 PM UTC: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
65a378e
Thu 14 Sep 2023 07:35:26 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
1b74bc4
Thu 14 Sep 2023 07:56:06 PM UTC: 
 treemap.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:4:
treemap.c:70:1: error: expected identifier or ‘(’ before ‘}’ token
   70 | }
      | ^
Compilation failed
95028dc
Thu 14 Sep 2023 07:56:35 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
96a9f9d
Fri 15 Sep 2023 09:29:30 PM UTC: 
 treemap.c | 23 +++++++++++++++++------
 1 file changed, 17 insertions(+), 6 deletions(-)
In file included from test.c:4:
treemap.c:81:1: error: expected identifier or ‘(’ before ‘}’ token
   81 | }
      | ^
Compilation failed
df69105
Fri 15 Sep 2023 09:29:43 PM UTC: 
 treemap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  13|5
total_score: 25/70
fd07c56
Fri 15 Sep 2023 09:30:23 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
cb2ead0
Fri 15 Sep 2023 09:32:38 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
cca9f61
Fri 15 Sep 2023 09:39:15 PM UTC: 
 treemap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  16|4
total_score: 30/70
a9dc6b6
Fri 15 Sep 2023 09:43:43 PM UTC: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:102:10: error: expected expression before ‘)’ token
  102 | }else if(){
      |          ^
Compilation failed
7e14fd1
Fri 15 Sep 2023 09:45:11 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
0132fb1
Fri 15 Sep 2023 09:50:47 PM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  16|4
total_score: 30/70
1fddf87
Fri 15 Sep 2023 09:57:44 PM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:118:5: error: expected expression before ‘}’ token
  118 |     }
      |     ^
Compilation failed
08c46d3
Fri 15 Sep 2023 10:00:03 PM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
0a4ee5a
Fri 15 Sep 2023 10:04:32 PM UTC: 
 treemap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:124:19: error: expected ‘;’ before ‘}’ token
  124 |         free(node)
      |                   ^
      |                   ;
  125 |       }
      |       ~            
Compilation failed
c2e4667
Fri 15 Sep 2023 10:04:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:124:14: error: ‘noe’ undeclared (first use in this function); did you mean ‘node’?
  124 |         free(noe);
      |              ^~~
      |              node
treemap.c:124:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4363ef0
Fri 15 Sep 2023 10:04:43 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
17bfca4
Fri 15 Sep 2023 10:04:48 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:124:14: error: ‘nodee’ undeclared (first use in this function); did you mean ‘node’?
  124 |         free(nodee);
      |              ^~~~~
      |              node
treemap.c:124:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
192ee99
Fri 15 Sep 2023 10:04:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 35/70
9016a72
Fri 15 Sep 2023 10:07:36 PM UTC: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:132:20: error: implicit declaration of function ‘minium’; did you mean ‘minimum’? [-Werror=implicit-function-declaration]
  132 |     TreeNode*min = minium(node->right);
      |                    ^~~~~~
      |                    minimum
treemap.c:132:20: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
treemap.c:134:26: error: expected ‘;’ before ‘_’
  134 |     node->pair->value=min _>pair->value
      |                          ^~
      |                          ;
cc1: all warnings being treated as errors
Compilation failed
ca0d06f
Fri 15 Sep 2023 10:07:53 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:134:26: error: expected ‘;’ before ‘_’
  134 |     node->pair->value=min _>pair->value
      |                          ^~
      |                          ;
Compilation failed
0bba303
Fri 15 Sep 2023 10:08:01 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:134:39: error: expected ‘;’ before ‘removeNode’
  134 |     node->pair->value=min->pair->value
      |                                       ^
      |                                       ;
  135 |       removeNode(tree, min)
      |       ~~~~~~~~~~                       
Compilation failed
e49aada
Fri 15 Sep 2023 10:08:06 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘removeNode’:
treemap.c:135:28: error: expected ‘;’ before ‘}’ token
  135 |       removeNode(tree, min)
      |                            ^
      |                            ;
  136 |   }
      |   ~                         
Compilation failed
d189e42
Fri 15 Sep 2023 10:23:22 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
57860dc
Fri 15 Sep 2023 10:29:45 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
5608ba0
